--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pawan portfolio</h1>
-  <h2>Iam a Web developer</h2>
+  <h2>I'm a Web developer</h2>
   <hr />
  <h3><a href="./public/birthday-invite.html">Birthday-invite project</a></h2> 
    <a href="./public/birthday-invite.html"> <img src="./assets/images/bday.png" height="200" ></a> 
